# Projeto-Padaria-Flask

./: README.md  app.py  pyproject.toml  requirements.txt
instance/: padaria.db
templates/: base.html  cadastrar.html  editar.html  index.html  produtos.html
